# swagger/paths/application/portal/update.yml
@@ -31,17 +31,17 @@ responses:
                 - code: "en"
                   articles_count: 32
                   categories_count: 9
-            custom_domain: "chatwoot.help"
+            custom_domain: "whisker.help"
             header_text: "Handbook"
-            homepage_link: "https://www.chatwoot.com"
+            homepage_link: "https://www.whisker.im"
             name: "Handbook"
             slug: "handbook"
             page_title: "Handbook"
             account_id: 123
             inbox:
               id: 123
-              name: "Chatwoot"
-              website_url: "chatwoot.com"
+              name: "Whisker"
+              website_url: "whisker.im"
               channel_type: "Channel::WebWidget"
               avatar_url: "https://example.com/avatar.png"
               widget_color: "#1F93FF"
@@ -57,7 +57,7 @@ responses:
               enable_email_collect: true
               csat_survey_enabled: true
               timezone: "America/Los_Angeles"
-              business_name: "Chatwoot"
+              business_name: "Whisker"
               hmac_mandatory: true
             logo:
               id: 123
